<resources>
    <string name="app_name">Appsolute_TodoList</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hi">안녕!</string>
    <string name="playground">오아시스</string>
    <string name="exit">나가기</string>
    <string name="oasis_button">OASIS</string>

    <string name="fox">clickable fox</string>
    <string name="wordBox">appears when fox clicked</string>
    <string name="levelText">LV: </string>
</resources>