<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/switchShowDDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnDDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dday_button"
            android:text="To D-Day" />

        <ImageButton
            android:id="@+id/btnHelp"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/help_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2020-08-23"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/listFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <FrameLayout
        android:id="@+id/listFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="197dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#FB8C00"
        android:clickable="true"
        android:src="@drawable/plus_button"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    //여우 뷰

    <Button
        android:id="@+id/btnOasis"
        android:layout_width="103dp"
        android:layout_height="70dp"
        android:background="@drawable/airplane_oasis_go"
        android:gravity="bottom|center_horizontal"
        android:text="@string/oasis_button"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/main_ground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/fox"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/fox"
        android:contentDescription="@string/fox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    //여우 말풍선 관련 뷰

    <ImageView
        android:id="@+id/wordBox"
        android:layout_width="117dp"
        android:layout_height="99dp"
        android:background="@drawable/word"
        android:contentDescription="@string/wordBox"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862" />

    <TextView
        android:id="@+id/hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/wordBox"
        app:layout_constraintEnd_toEndOf="@+id/wordBox"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@+id/wordBox"
        app:layout_constraintTop_toTopOf="@+id/wordBox"
        app:layout_constraintVertical_bias="0.36" />

    //여우 애정도 관련 뷰

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/listFragment">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/loveprg"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="120dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="23dp"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/love_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="125dp"
                android:text="0"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/heart"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@drawable/heart2"
                android:contentDescription="@string/wordBox" />

        </FrameLayout>


        <TextView
            android:id="@+id/levelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/levelText"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/levelNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="0"
            android:textColor="#000000" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>